Fix:Header spacing fixed

--- a/scss/4_pages/_about.scss
+++ b/scss/4_pages/_about.scss
@@ -4,7 +4,7 @@
     position: relative;
 
     @include breakpoint(phone) {
-        padding: 7.5rem 5vw;
+        padding: 10rem 5vw;
         padding-bottom: 5vw;
 
     }
