--- a/scss/4_pages/_contact.scss
+++ b/scss/4_pages/_contact.scss
@@ -7,7 +7,7 @@
     justify-content: space-between;
     align-items: center;
 
-    @include breakpoint(phone) {
+    @include breakpoint(tab) {
         flex-direction: column;
 
     }
@@ -16,9 +16,9 @@
         width: 35%;
 
 
-        @include breakpoint(phone) {
+        @include breakpoint(tab) {
             width: 100%;
-            padding-top: 7.5rem;
+            padding-top: 10rem;
             padding-bottom: 5vw;
 
         }
@@ -30,7 +30,7 @@
         background-color: $grey-100;
         border-radius: $bora-small;
 
-        @include breakpoint(phone) {
+        @include breakpoint(tab) {
             width: 100%;
 
         }
