--- a/scss/4_pages/_homepage.scss
+++ b/scss/4_pages/_homepage.scss
@@ -4,7 +4,7 @@
     position: relative;
 
     @include breakpoint(tab) {
-        padding-top: 7.5rem;
+        padding-top: 10rem;
 
     }
 
