--- a/scss/4_pages/_product.scss
+++ b/scss/4_pages/_product.scss
@@ -4,7 +4,8 @@
     padding-top: 10vw;
 
     @include breakpoint(tab) {
-        padding-top: 7.5rem;
+        padding-top: 10rem;
+
     }
 
     &-content {
